--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kakada777.github.io/kakda-app",
+  "homepage": "https://kakada777.github.io/kakda-app",
   "name": "kakda-app",
   "version": "0.1.0",
   "private": true,
